# drasdic_api

./: .pre-commit-config.yaml  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pythonapp.yml
drasdic/data/: scene_generator.py  test.py
drasdic/evaluation/: dcase_evaluation.py  evaluation.py
drasdic/inference/: inference_utils.py  interface.py
drasdic/models/: bled.py  encoder_decoder.py  model.py
drasdic/util/: audio_util.py  graph_matching.py  misc_util.py  raven_util.py
tests/consistency/: test_docstrings.py
tests/integration/: args_integration_test.yaml  test_inference.py  test_st.txt
tests/utils/: check_docstrings.py
weights/: args.yaml  drasdic_args.yaml
