[project]
name = "drasdic"
version = "0.1.0"
description = "Domain Randomization for Animal Sound Detection In-Context"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "PyYAML==6.0.1",
  "torch==2.2.2",
  "librosa==0.10.2.post1",
  "torchaudio==2.2.2",
  "tqdm==4.66.4",
  "einops==0.8.0",
  "x_transformers==1.30.1"
]


[tool.setuptools]
packages = ["drasdic"]

[tool.uv.workspace]
members = [
    "drasdic_api",
]

[dependency-groups]

dev = [
  "pre-commit<=4.2.0",
  "pytest<=7.4.0",
  "ruff<=0.11.2",
  "click<=8.1.7",
  "isort<=5.13.2",
  "pytest<=7.4.0",
  "yamllint<=1.35.1",
  "deptry<=0.23.0",
]

[project.urls]
Homepage = "https://github.com/earthspecies/drasdic_api"
Repository = "https://github.com/earthspecies/drasdic_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drasdic"]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "check_*.py",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# List of plugins and Rules
# Pycodestyle all errors and warning, Pydoclint, Pyflakes, bugbear, annotations
select = ["E4", "E7", "E9", "F", "I"] # Default rules
extend-select = ["DOC", "B9", "B", "E", "W", "ANN"]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.codespell]
skip = "*.csv"

[tool.deptry]
exclude = ["conftest.py", ".venv", "tests"]

